Tangent space normals maps are black when using OSL #39946

Closed
opened 2014-04-29 05:56:34 +02:00 by Jason Clarke · 11 comments

System Information
Mac OS X 10.9.2, AMD 5870

Blender Version
Broken: 2.70.5 d8282da

Short description of error
When using the normal-map node in tangent-space mode with OSL, you always get black objects. Even when the object has UVs and renders correctly with SVM.

Exact steps for others to reproduce the error
Open the attached .blend file. Render both with OSL enabled and with OSL disabled. The OSL version gives a black cube.

The example shader is feeding the normal map node with a noise texture for simplicity of packing things up, but the same bug shows with an actual normal map.

Note that it seems to be only be tangent space that is affected, the node works correctly otherwise.

osl_black_bug_build.blend

**System Information** Mac OS X 10.9.2, AMD 5870 **Blender Version** Broken: 2.70.5 d8282da **Short description of error** When using the normal-map node in tangent-space mode with OSL, you always get black objects. Even when the object has UVs and renders correctly with SVM. **Exact steps for others to reproduce the error** Open the attached .blend file. Render both with OSL enabled and with OSL disabled. The OSL version gives a black cube. The example shader is feeding the normal map node with a noise texture for simplicity of packing things up, but the same bug shows with an actual normal map. Note that it seems to be only be tangent space that is affected, the node works correctly otherwise. [osl_black_bug_build.blend](https://archive.blender.org/developer/F86333/osl_black_bug_build.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Looks like the wrong blend file, I don't see a cube in there, nor any Cycles Shader .Just a Suzanne.

Looks like the wrong blend file, I don't see a cube in there, nor any Cycles Shader .Just a Suzanne.
Author

osl_black_bug.blend

Sorry about that. I swear, every other bug report I file I manage to grab the wrong .blend...

[osl_black_bug.blend](https://archive.blender.org/developer/F86348/osl_black_bug.blend) Sorry about that. I swear, every other bug report I file I manage to grab the wrong .blend...

Confirmed the black OSL render.

Confirmed the black OSL render.
Brecht Van Lommel was assigned by Sergey Sharybin 2014-04-29 11:58:17 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by blender/blender-addons-contrib@80e137e826

This issue was referenced by blender/blender-addons-contrib@80e137e826cac408e66d79d16db44d732e117b01

This issue was referenced by 80e137e826

This issue was referenced by 80e137e826cac408e66d79d16db44d732e117b01

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 80e137e826.

Closed by commit 80e137e826.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39946
No description provided.