Fix T39946: OSL + tangent space normal maps not working in Cycles.